--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-commonjs": "^21.0.2",
     "cross-env": "^7.0.2",
     "rollup": "^2.26.11",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-serve": "^1.0.4"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-serve": "^1.0.4",
+    "rollup-plugin-vue": "^6.0.0"
   }
 }
